--- a/src/app/shared/authentication/signup-wizard/signup-wizard.component.html
+++ b/src/app/shared/authentication/signup-wizard/signup-wizard.component.html
@@ -165,45 +165,45 @@
 </section>
 <div class="view-wrapper" *ngIf="isShowUOT">
     <div class="x" (click)="isShowUOT = !isShowUOT"> X</div>
-    <ngx-extended-pdf-viewer
-            [showBookmarkButton]="false"
-            [showBorders]="false"
-            [showFindButton]="false"
-            [showOpenFileButton]="false"
-            [showPagingButtons]="false"
-            [showPresentationModeButton]="false"
-            [showRotateButton]="false"
-            [showScrollingButton]="false"
-            [showSecondaryToolbarButton]="false"
-            [showSidebarButton]="false"
-            [showSpreadButton]="false"
-            [showZoomButtons]="false"
-            [src]="'assets/docs/ADLTOU.pdf'"
-            height="80vh"
-            showSidebarOnLoad="false"
-            textLayer="false"
-            useBrowserLocale="true"></ngx-extended-pdf-viewer>
+<!--    <ngx-extended-pdf-viewer-->
+<!--            [showBookmarkButton]="false"-->
+<!--            [showBorders]="false"-->
+<!--            [showFindButton]="false"-->
+<!--            [showOpenFileButton]="false"-->
+<!--            [showPagingButtons]="false"-->
+<!--            [showPresentationModeButton]="false"-->
+<!--            [showRotateButton]="false"-->
+<!--            [showScrollingButton]="false"-->
+<!--            [showSecondaryToolbarButton]="false"-->
+<!--            [showSidebarButton]="false"-->
+<!--            [showSpreadButton]="false"-->
+<!--            [showZoomButtons]="false"-->
+<!--            [src]="'assets/docs/ADLTOU.pdf'"-->
+<!--            height="80vh"-->
+<!--            showSidebarOnLoad="false"-->
+<!--            textLayer="false"-->
+<!--            useBrowserLocale="true"></ngx-extended-pdf-viewer>-->
 </div>
 <div class="view-wrapper" *ngIf="isPrivatePolicy">
     <div class="x" (click)="isPrivatePolicy = !isPrivatePolicy"> X</div>
-    <ngx-extended-pdf-viewer
-            [showBookmarkButton]="false"
-            [showBorders]="false"
-            [showFindButton]="false"
-            [showOpenFileButton]="false"
-            [showPagingButtons]="false"
-            [showPresentationModeButton]="false"
-            [showRotateButton]="false"
-            [showScrollingButton]="false"
-            [showSecondaryToolbarButton]="false"
-            [showSidebarButton]="false"
-            [showSpreadButton]="false"
-            [showZoomButtons]="false"
-            [src]="'assets/docs/ADLPrivacyPolicy.pdf'"
-            height="80vh"
-            showSidebarOnLoad="false"
-            textLayer="false"
-            useBrowserLocale="true"></ngx-extended-pdf-viewer>
+<!--    <ngx-extended-pdf-viewer-->
+<!--            [showBookmarkButton]="false"-->
+<!--            [showBorders]="false"-->
+<!--            [showFindButton]="false"-->
+<!--            [showOpenFileButton]="false"-->
+<!--            [showPagingButtons]="false"-->
+<!--            [showPresentationModeButton]="false"-->
+<!--            [showRotateButton]="false"-->
+<!--            [showScrollingButton]="false"-->
+<!--            [showSecondaryToolbarButton]="false"-->
+<!--            [showSidebarButton]="false"-->
+<!--            [showSpreadButton]="false"-->
+<!--            [showZoomButtons]="false"-->
+<!--            [src]="'assets/docs/ADLPrivacyPolicy.pdf'"-->
+<!--            height="80vh"-->
+<!--            showSidebarOnLoad="false"-->
+<!--            textLayer="false"-->
+<!--            useBrowserLocale="true"></ngx-extended-pdf-viewer>-->
 </div>
 <!--<mat-step [completed]="false" [stepControl]="fourthGroup">-->
 <!--<ng-template matStepLabel>Summary</ng-template>-->
