--- a/src/app/shared/popups/error-modal/error-modal.component.html
+++ b/src/app/shared/popups/error-modal/error-modal.component.html
@@ -1,5 +1,4 @@
-<ng-container>
-    <pre>{{data | json}}</pre>
+<ng-container *ngIf="data && data.modalType">
     <section class="error-modal">
         <div class="close" (click)="closeModal()">
             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14">
@@ -9,7 +8,7 @@
             </svg>
         </div>
 
-        <ng-container>
+        <ng-container *ngIf="data.modalType.toString() === 'wifi'">
             <div class="main-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="57.624" height="45.524" viewBox="0 0 57.624 45.524">
                     <defs>
@@ -35,7 +34,7 @@
             <p>Please check your internet connection and try again.</p>
         </ng-container>
 
-        <ng-container *ngIf="data.modalType.toString() === 'blueTooth' ">
+        <ng-container *ngIf="data.modalType.toString() === 'blueTooth'">
             <div class="main-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35.218" height="65.189" viewBox="0 0 35.218 65.189">
                     <path id="Path_15960" fill="#ce564b"
@@ -43,7 +42,7 @@
                           data-name="Path 15960" transform="translate(-160.198 -913.233)"/>
                 </svg>
             </div>
-            <p>Bluetooth has been turned off. Please turn Bluetooth on and try again.</p>
+            <p>Please Grant Location Permissions: <br/> Settings -> Applications -> onTarget -> Permissions.</p>
         </ng-container>
 
         <ng-container *ngIf="data.modalType.toString() === 'general' ">
